test/mutation_analysis/s0227_basic_calculator_ii/hafis/o3/mutants/2/result.txt
./test/mutation_analysis/s0227_basic_calculator_ii/hafis/o3/mutants/2/Solution.java:20: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
